CLC-397 - Add wrapping + fix classes + fix URL + more ellipsis

--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -283,7 +283,7 @@ body > header > h1 {
 	background-image: url('/img/myb/icon_block_24x24.png');
 }
 .cc-icon-big-classes {
-	background-image: url('/img/myb/icon_academics_24x24.png');
+	background-image: url('/img/myb/icon_classes_24x24.png');
 }
 .cc-icon-big-completed {
 	background-image: url('/img/myb/icon_completed_24x24.png');
